<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_shares">Post shares</string>
    <string name="description_post_views">Post views</string>
    <string name="post_text">Post text…</string>
    <string name="description_post_save">Save post</string>
    <string name="description_post_cancel_edition">Cancel editing</string>
    <string name="error_empty_post">Post can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="edit_message">Edit message</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="add_post">Add post</string>
    <string name="play_video">Play video</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="google_play_unavailable">Google API Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_upgrade_need">Please, upgrade this App</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="attachment">Attachment</string>
    <string name="new_posts">"New posts "</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="menu_save">Save</string>
    <string name="description_back">Back</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="signout">Sign Out</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="auth_error">Authentification Error</string>
    <string name="ad_description">Advertaising Description</string>


</resources>